--- a/starter-code/ShoppingListWithDetailView/app/src/main/res/layout/activity_detail.xml
+++ b/starter-code/ShoppingListWithDetailView/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_detail"
@@ -12,27 +12,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ly.generalassemb.drewmahrt.shoppinglistdetailview.DetailActivity">
 
-    <TextView
-        android:id="@+id/detail_name"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/detail_description"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/detail_price"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/detail_category"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
+        android:layout_height="match_parent"/>
+</RelativeLayout>
