--- a/starter-code/ShoppingListWithDetailView/app/src/main/res/layout/fragment_detail.xml
+++ b/starter-code/ShoppingListWithDetailView/app/src/main/res/layout/fragment_detail.xml
@@ -1,7 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+              android:orientation="vertical"
              tools:context="ly.generalassemb.drewmahrt.shoppinglistdetailview.DetailFragment">
 
     <TextView
@@ -28,4 +29,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</FrameLayout>
+</LinearLayout>
